# win32-64-bridge

./: CMakeLists.txt  README.md  bridge32.sln  bridge32.vcxproj  bridge32.vcxproj.filters  win32-64-bridge.sln
Bridge32/: Bridge32.vcxproj  Bridge32.vcxproj.filters  CMakeLists.txt  IPCServer.cpp  IPCServer.h  main.cpp
Bridge64/: Bridge64.cpp  Bridge64.vcxproj  Bridge64.vcxproj.filters  CMakeLists.txt  IPCClient.cpp  IPCClient.h
Calculator32/: CMakeLists.txt  Calculator32.cpp  Calculator32.h  Calculator32.vcxproj  Calculator32.vcxproj.filters
Common/: IPCProtocol.h
TestApp64/: CMakeLists.txt  TestApp64.vcxproj  TestApp64.vcxproj.filters  main.cpp
